syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  string message = 1;
}

message SendMessageResponse {
  bool ok = 1;
}